# rust-projects

./: .gitignore  package.json
.cargo/workspace/: Cargo.toml
WallpapersManager/: .gitignore  Cargo.toml
WallpapersManager/src/: config.rs  lib.rs  main.rs  monitors.rs
WallpapersManager/src/download/: flickr.rs  mod.rs  wallhaven.rs  wallpaper_flare.rs
WallpapersManager/src/scrapers/: flickr.rs  mod.rs  wallhaven.rs  wallpaper_flare.rs
WallpapersManager/src/wallpapers/: change.rs  choose.rs  mod.rs  sort.rs
libs/ActixHelpers/: Cargo.toml
libs/ActixHelpers/src/: lib.rs
libs/ConfigHelpers/: Cargo.toml
libs/ConfigHelpers/src/: lib.rs
libs/DieselHelpers/: Cargo.toml
libs/DieselHelpers/src/: enums.rs  get_only_result.rs  lib.rs
libs/FirefoxSyncSdk/: Cargo.toml  children.json
libs/FirefoxSyncSdk/src/: bookmarks.rs  client.rs  lib.rs
libs/FirefoxSyncSdk/src/structs/: bookmarks.json  ids.rs  mod.rs
libs/don_error/Crate/: Cargo.toml
libs/don_error/Crate/src/: don_error.rs  don_error_ctx.rs  lib.rs  option_extensions.rs  result_extensions.rs
libs/don_error/Crate/src/helpers/: actix.rs  mod.rs  yew.rs
libs/don_error/Derive/: Cargo.toml
libs/don_error/Derive/src/: lib.rs
